Update Flag hacker_header

--- a/.cloudbees/casc/feature-management/flags/hacker_header.yaml
+++ b/.cloudbees/casc/feature-management/flags/hacker_header.yaml
@@ -6,8 +6,12 @@ flag: hacker_header
 flagType: string
 description: 
 labels:
+  - hackers
 
 availableValues:
   - orange
+  - black
+  - green
+  - pink
 
 isPermanent: false
